major update: Composer installation, sample data installation via bin/magento cli command, permission fixes, new file synchronization, new step by step guide, etc

--- a/debian_config/Dockerfile
+++ b/debian_config/Dockerfile
@@ -1,8 +1,7 @@
 FROM debian:latest
 MAINTAINER chandlerbing7@gmail.com
 
-ARG SSH_PRIVATE_KEY
-ARG SSH_PUBLIC_KEY
+#ARG AUTH_JSON
 
 # System
 RUN	apt update
@@ -13,24 +12,27 @@ RUN echo "127.0.0.1 localhost magento2u.loc" >> /etc/hosts
 RUN apt install -y 	apache2 \
 						libapache2-mod-php && \
 						apt-get clean
+# PHP
 RUN apt install apt-transport-https lsb-release ca-certificates -y ; \
+    apt install mc -y ; \
 	apt install wget -y ; \
-	apt install mc -y ; \
 	wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg ; \
-	echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" > \
-	/etc/apt/sources.list.d/php.list ; \
-	apt update ; apt install php7.1 -y
-RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
-RUN a2enmod rewrite ; \
-	a2enmod mpm_prefork
-#	a2enmod php7.0
+	echo 	"deb https://packages.sury.org/php/ $(lsb_release -sc) main" > \
+			/etc/apt/sources.list.d/php.list ; \
+	apt update ; apt install php7.2 -y
+RUN	apt install -y 	php7.2-bcmath php7.2-bz2 php7.2-cli php7.2-common \
+					php7.2-curl php7.2-dba php7.2-gd php7.2-gmp php7.2-imap \
+					php7.2-intl php7.2-ldap php7.2-mbstring  \
+					php7.2-mysql php7.2-odbc php7.2-pgsql php7.2-recode \
+					php7.2-snmp php7.2-soap php7.2-sqlite php7.2-tidy \
+					php7.2-xml php7.2-xmlrpc php7.2-xsl php7.2-zip
 
 # Create user and assign to web server group
-RUN adduser magento
-RUN usermod -aG www-data magento
-
-ENV APACHE_RUN_USER     magento
-ENV APACHE_RUN_GROUP    www-data
+#RUN adduser magento
+RUN usermod -aG root www-data
+#
+#ENV APACHE_RUN_USER     magento
+#ENV APACHE_RUN_GROUP    www-data
 ENV APACHE_LOG_DIR      /var/log/apache2
 ENV APACHE_PID_FILE     /var/run/apache2.pid
 ENV APACHE_RUN_DIR      /var/run/apache2
@@ -40,13 +42,15 @@ COPY ./conf/000-default.conf /etc/apache2/sites-available/000-default.conf
 
 RUN a2ensite 000-default
 
-# PHP
-RUN	apt install -y 	php7.1-bcmath php7.1-bz2 php7.1-cli php7.1-common \
-					php7.1-curl php7.1-dba php7.1-gd php7.1-gmp php7.1-imap \
-					php7.1-intl php7.1-ldap php7.1-mbstring php7.1-mcrypt \
-					php7.1-mysql php7.1-odbc php7.1-pgsql php7.1-recode \
-					php7.1-snmp php7.1-soap php7.1-sqlite php7.1-tidy \
-					php7.1-xml php7.1-xmlrpc php7.1-xsl php7.1-zip
+RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
+RUN a2enmod rewrite ; \
+	a2enmod mpm_prefork
+
+RUN update-alternatives --set php /usr/bin/php7.2 ; \
+	a2dismod php7.0 ; a2enmod php7.2 ; service apache2 restart
+
+COPY ./conf/php.ini /etc/php/7.1/apache2/php.ini
+COPY ./conf/php.ini /etc/php/7.2/apache2/php.ini
 
 # MySQL
 RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y mariadb-server
@@ -58,6 +62,8 @@ RUN /etc/init.d/mysql start && \
 # Composer
 RUN curl -sS https://getcomposer.org/installer | php && \
     mv composer.phar /usr/local/bin/composer
+
+COPY ./composer/auth.json /root/.composer/auth.json
 
 # NodeJs
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
