--- a/docker-compose_windows.yml
+++ b/docker-compose_windows.yml
@@ -16,9 +16,6 @@ services:
       - "4306:3306"
     volumes:
 #       - /Path/To/Your/magento/magento2-dev-dk/instances:/var/www/html/shared
-#       - /Users/molochko/Sites/magento/magento2-dev-dk/instances:/var/www/html/shared
-       - src-volume-dk:/var/www/html/shared
+       - /Users/molochko/Sites/magento/magento2-dev-dk/instances:/var/www/html/shared
     tty: true
     container_name: m23
-volumes:
-  src-volume-dk:
