--- a/debian_config/Dockerfile
+++ b/debian_config/Dockerfile
@@ -19,13 +19,13 @@ RUN apt install apt-transport-https lsb-release ca-certificates -y ; \
 	wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg ; \
 	echo 	"deb https://packages.sury.org/php/ $(lsb_release -sc) main" > \
 			/etc/apt/sources.list.d/php.list ; \
-	apt update ; apt install php7.2 -y
-RUN	apt install -y 	php7.2-bcmath php7.2-bz2 php7.2-cli php7.2-common \
-					php7.2-curl php7.2-dba php7.2-gd php7.2-gmp php7.2-imap \
-					php7.2-intl php7.2-ldap php7.2-mbstring  \
-					php7.2-mysql php7.2-odbc php7.2-pgsql php7.2-recode \
-					php7.2-snmp php7.2-soap php7.2-sqlite php7.2-tidy \
-					php7.2-xml php7.2-xmlrpc php7.2-xsl php7.2-zip
+	apt update ; apt install php7.3 -y
+RUN	apt install -y 	php7.3-bcmath php7.3-bz2 php7.3-cli php7.3-common \
+					php7.3-curl php7.3-dba php7.3-gd php7.3-gmp php7.3-imap \
+					php7.3-intl php7.3-ldap php7.3-mbstring  \
+					php7.3-mysql php7.3-odbc php7.3-pgsql php7.3-recode \
+					php7.3-snmp php7.3-soap php7.3-sqlite php7.3-tidy \
+					php7.3-xml php7.3-xmlrpc php7.3-xsl php7.3-zip
 
 # Create user and assign to web server group
 #RUN adduser magento
@@ -46,11 +46,12 @@ RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 RUN a2enmod rewrite ; \
 	a2enmod mpm_prefork
 
-RUN update-alternatives --set php /usr/bin/php7.2 ; \
-	a2dismod php7.0 ; a2enmod php7.2 ; service apache2 restart
+RUN update-alternatives --set php /usr/bin/php7.3 ; \
+	a2dismod php7.0 ; a2enmod php7.3 ; service apache2 restart
 
 COPY ./conf/php.ini /etc/php/7.1/apache2/php.ini
 COPY ./conf/php.ini /etc/php/7.2/apache2/php.ini
+COPY ./conf/php.ini /etc/php/7.3/apache2/php.ini
 
 # MySQL
 RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y mariadb-server
@@ -70,7 +71,7 @@ COPY ./mysql/my.cnf /etc/mysql/my.cnf
 RUN /etc/init.d/mysql restart
 
 # Composer
-RUN curl -sS https://getcomposer.org/installer | php && \
+RUN sh ./composer/install.sh && \
     mv composer.phar /usr/local/bin/composer
 
 COPY ./composer/auth.json /root/.composer/auth.json
