--- a/debian_config/Dockerfile
+++ b/debian_config/Dockerfile
@@ -71,7 +71,10 @@ COPY ./mysql/my.cnf /etc/mysql/my.cnf
 RUN /etc/init.d/mysql restart
 
 # Composer
-RUN sh ./composer/install.sh && \
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
+    php -r "if (hash_file('sha384', 'composer-setup.php') === 'c31c1e292ad7be5f49291169c0ac8f683499edddcfd4e42232982d0fd193004208a58ff6f353fde0012d35fdd72bc394') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" && \
+    php composer-setup.php --version=1.10.17 && \
+    php -r "unlink('composer-setup.php');" && \
     mv composer.phar /usr/local/bin/composer
 
 COPY ./composer/auth.json /root/.composer/auth.json
