created variables in the Dockerfiles

--- a/debian_config/Dockerfile
+++ b/debian_config/Dockerfile
@@ -2,6 +2,9 @@ FROM debian:latest
 MAINTAINER chandlerbing7@gmail.com
 
 #ARG AUTH_JSON
+ARG php_version=php7.4
+ARG php_module=$php_version
+ARG composer_version=1.10.17
 
 # System
 RUN	apt update
@@ -19,13 +22,13 @@ RUN apt install apt-transport-https lsb-release ca-certificates -y ; \
 	wget -O /etc/apt/trusted.gpg.d/php.gpg https://packages.sury.org/php/apt.gpg ; \
 	echo 	"deb https://packages.sury.org/php/ $(lsb_release -sc) main" > \
 			/etc/apt/sources.list.d/php.list ; \
-	apt update ; apt install php7.3 -y
-RUN	apt install -y 	php7.3-bcmath php7.3-bz2 php7.3-cli php7.3-common \
-					php7.3-curl php7.3-dba php7.3-gd php7.3-gmp php7.3-imap \
-					php7.3-intl php7.3-ldap php7.3-mbstring  \
-					php7.3-mysql php7.3-odbc php7.3-pgsql php7.3-recode \
-					php7.3-snmp php7.3-soap php7.3-sqlite php7.3-tidy \
-					php7.3-xml php7.3-xmlrpc php7.3-xsl php7.3-zip
+	apt update ; apt install $php_version -y
+RUN	apt install -y 	${php_module}-bcmath ${php_module}-bz2 ${php_module}-cli ${php_module}-common \
+					${php_module}-curl ${php_module}-dba ${php_module}-gd ${php_module}-gmp ${php_module}-imap \
+					${php_module}-intl ${php_module}-ldap ${php_module}-mbstring  \
+					${php_module}-mysql ${php_module}-odbc ${php_module}-pgsql php7.3-recode \
+					${php_module}-snmp ${php_module}-soap ${php_module}-sqlite ${php_module}-tidy \
+					${php_module}-xml ${php_module}-xmlrpc ${php_module}-xsl ${php_module}-zip
 
 # Create user and assign to web server group
 #RUN adduser magento
@@ -46,12 +49,13 @@ RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 RUN a2enmod rewrite ; \
 	a2enmod mpm_prefork
 
-RUN update-alternatives --set php /usr/bin/php7.3 ; \
-	a2dismod php7.0 ; a2enmod php7.3 ; service apache2 restart
+RUN update-alternatives --set php /usr/bin/$php_version ; \
+	a2dismod php7.0 ; a2enmod $php_version ; service apache2 restart
 
 COPY ./conf/php.ini /etc/php/7.1/apache2/php.ini
 COPY ./conf/php.ini /etc/php/7.2/apache2/php.ini
 COPY ./conf/php.ini /etc/php/7.3/apache2/php.ini
+COPY ./conf/php.ini /etc/php/7.4/apache2/php.ini
 
 # MySQL
 RUN apt update && DEBIAN_FRONTEND=noninteractive apt install -y mariadb-server
@@ -73,7 +77,7 @@ RUN /etc/init.d/mysql restart
 # Composer
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
     php -r "if (hash_file('sha384', 'composer-setup.php') === 'c31c1e292ad7be5f49291169c0ac8f683499edddcfd4e42232982d0fd193004208a58ff6f353fde0012d35fdd72bc394') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" && \
-    php composer-setup.php --version=1.10.17 && \
+    php composer-setup.php --version=$composer_version && \
     php -r "unlink('composer-setup.php');" && \
     mv composer.phar /usr/local/bin/composer
 
